Try to fix nav pannel overflow

--- a/src/components/NavPannel/NavPannel.css
+++ b/src/components/NavPannel/NavPannel.css
@@ -14,7 +14,7 @@
   position: fixed;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: black;
   top: 0;
   left: 0;
@@ -28,8 +28,9 @@
 .nav-wrapper {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   color: white;
+  overflow: hidden;
 }
 
 .nav-wrapper a {
